--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "universal-cookie": "^6.1.0"
   }
 }
